# ghatana

./: .dockerignore  .env.production.example  .gitignore  .npmrc  .product-docs-scripts-inventory.filtered.rel.txt  .tmp-java-module-inventory.txt  ACCESSIBILITY_AUDIT_REPORT.md  ACCESSIBILITY_TESTING_GUIDE.md  AEP_AUDIT_REPORT.md  AEP_AUDIT_REPORT_2026-03-27.md  AEP_COMPREHENSIVE_AUDIT_REPORT_2026-03-26.md  AEP_COMPREHENSIVE_AUDIT_REPORT_2026-03-28.md  AGENT_ARCHITECTURE_GOVERNANCE_ANALYSIS.md  AGENT_BEHAVIORAL_TEST_SUITE_SUMMARY.md  API_USABILITY_GUIDELINES.md  APRIL5_COMPLETE_DELIVERY_SUMMARY.md  APRIL5_COMPLETE_SESSION_SUMMARY.md  APRIL5_SESSION_COMPLETE.md  APRIL5_SESSION_DELIVERY_SUMMARY.md  AUDIO_VIDEO_AUDIT_REPORT.md  AUDIO_VIDEO_AUDIT_REPORT_2026-03-28.md  AUDIT_IMPLEMENTATION_COMPLETE.md  AUDIT_IMPLEMENTATION_PROGRESS.md  AUDIT_REMEDIATION_IMPLEMENTATION_PLAN_2026-04-16.md  BUILD_VALIDATION_PROGRESS.md  COMPLETE_ROADMAP_AUDIT_TO_IMPLEMENTATION.md  COMPREHENSIVE_COMP_DECOM_COMPLETION_REPORT.md  COMPREHENSIVE_CONTRACT_TEST_SUMMARY.md  COMPREHENSIVE_PRODUCT_AUDIT_REPORT_2026-04-16.md  COMPREHENSIVE_TEST_AUDIT_REPORT.md  CONSOLIDATION_HEALTHSTATUS_PHASE1_COMPLETE.md  CONSOLIDATION_TEMPLATE_HEALTHSTATUS.md  CONTRIBUTING.md  DATA_CLOUD_AEP_AUDIO_VIDEO_TASK_BY_TASK_IMPLEMENTATION_PLAN.md  DATA_CLOUD_AUDIT_REPORT_2026-03-27.md  DATA_CLOUD_COMPREHENSIVE_AUDIT_REPORT.md  DATA_CLOUD_COMPREHENSIVE_AUDIT_REPORT_2026.md  DATA_CLOUD_COMP_DECOM_COMPLETION_REPORT.md  DATA_CLOUD_COVERAGE_ANALYSIS.md  DATA_CLOUD_COVERAGE_EXECUTIVE_SUMMARY.md  (+234 more)
products/audio-video/: .env.example  ARCHITECTURE_ALIGNMENT_SUMMARY.md  AUDIO_VIDEO_AUDIT_FINDINGS.md  AUDIO_VIDEO_AUDIT_REPORT_2026-03-25.md  AUDIO_VIDEO_AUDIT_REPORT_2026-03-26.md  AUDIO_VIDEO_COMPREHENSIVE_AUDIT_REPORT.md  AUDIO_VIDEO_IMPLEMENTATION_PROGRESS.md  AUDIO_VIDEO_STT_CONFIGURATION.md  AUDIO_VIDEO_TECHNICAL_REVIEW.md  Cargo.toml  DAY_6_PROTO_CONSOLIDATION.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_AUDIT_REPORT.md  MIGRATION_GUIDE.md  OWNER.md  SERVICE_ENDPOINTS_CONFIG.md  build.gradle.kts  pnpm-lock.yaml  pnpm-workspace.yaml  prometheus.audio-video.yml  settings.gradle.kts
products/audio-video/.gitea/workflows/: audio-video-cd.yml  audio-video-ci.yml
products/audio-video/apps/desktop/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
products/audio-video/audio-video-observability/: build.gradle.kts
products/audio-video/benchmarks/: CacheAndSerializationBenchmarks.java  JmhAudioVideoBenchmarks.java
products/audio-video/config/: docker-compose.prod.yml
products/audio-video/docker/: Dockerfile.ai-voice  Dockerfile.multimodal-service  Dockerfile.stt-service  Dockerfile.tts-service  Dockerfile.vision-service
products/audio-video/docs/: API_DOCUMENTATION.md  AUDIO_FORMAT_SPEC.md  CIRCUIT_BREAKER_DIFFERENCES.md  MEDIA_PRIVACY_AND_RETENTION_POLICY.md  capability-map.md
products/audio-video/docs-generated/: 00-reverse-engineering-summary.md  AUDIO-VIDEO-COMPREHENSIVE-PLAN.md  SECURITY_HARDENING_GUIDE.md
products/audio-video/docs-generated/01-vision-plan-requirements/: 01-product-vision.md  02-capability-map.md  03-requirements.md  04-user-journeys.md  05-roadmap-reconstruction.md
products/audio-video/docs-generated/02-architecture-decisions-design/: 01-system-architecture.md  02-module-package-architecture.md  03-frontend-architecture.md  04-backend-architecture.md  05-data-architecture.md  06-api-contract-design.md  07-technology-stack-guidance.md  ADR-STT-001-whisper-external-dependency.md
products/audio-video/docs-generated/03-test-inventory-expectations/: 01-test-inventory.md
products/audio-video/docs-generated/04-implementation-plan/: 01-polyglot-implementation-plan.md  02-polyglot-keep-in-product-strategy.md
products/audio-video/docs/audits/: PRODUCTION_READINESS_TASK_MAP.md  audio-video-feature-completeness-matrix.md
products/audio-video/infra/kubernetes/: ai-voice.yaml  multimodal-service.yaml  namespace.yaml  networkpolicy.yaml  stt-configmap.yaml  (+3 more)
products/audio-video/integration-tests/: README.md  build.gradle.kts  docker-compose.integration.yml
products/audio-video/monitoring/: docker-compose.monitoring.yml
products/audio-video/scripts/: start-services.sh  stop-services.sh
products/audio-video/test-fixtures/: media-contract-fixtures.json
products/dcmaar/: .bufignore  .gitignore  .npmrc  Cargo.toml  Cargo_demo.toml  Makefile  OWNER.md  README.md  buf.gen.doc.yaml  buf.gen.go.yaml  buf.gen.js.yaml  buf.gen.minimal.yaml  buf.gen.rust.yaml  buf.gen.yaml  buf.work.yaml  dependency-graph.json  domain-invariants.json  eslint.config.cjs  go.mod  go.sum  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  refactor_moves_20251114_112301.json  rust-toolchain.toml  turbo.json
products/dcmaar/apps/: package.json
products/dcmaar/contracts/: CONTRACTS_OVERVIEW.md  buf.yaml  guardian.proto
products/dcmaar/docs/: ARCHITECTURE_GUARDRAILS.md  BACKEND_SYNC_API_REFERENCE.md  BACKEND_SYNC_GUIDE.md  BACKEND_SYNC_INDEX.md  BACKEND_SYNC_OPERATIONS_GUIDE.md  BACKEND_SYNC_QUICK_REFERENCE.md  BACKEND_SYNC_TESTING_GUIDE.md  DCMAAR_BACKLOG.md  DCMAAR_BACKLOG_INDEX.md  DESIGN_ARCHITECTURE.md  DOCUMENTATION_SUMMARY.md  DOCUMENTS_MANIFEST.txt  GUARDIAN_BROWSER_EXTENSION_MONITORING.md  LINUX_INSTALLERS_IMPLEMENTATION.md  LOCAL_DEVELOPMENT_SETUP.md  PROJECT_STRUCTURE_VISUAL.md  README.md  README_BACKEND_SYNC.md  SECURE_CONNECTORS_BACKLOG.md  SECURE_CONNECTORS_SUMMARY.md  SESSION_SUMMARY.md
products/dcmaar/scripts/: build-installers.sh  build-release.sh  build.sh  cleanup-npm-files.sh  deploy.sh  seed-demo.sh
products/python-fixture/: README.md  kernel-product.yaml  pyproject.toml
products/python-fixture/src/: __init__.py  main.py  message.py
products/python-fixture/tests/: __init__.py  test_integration.py  test_message.py
products/rust-fixture/: Cargo.toml  README.md  kernel-product.yaml
products/rust-fixture/.cargo/: config.toml
products/rust-fixture/src/: lib.rs  main.rs
products/rust-fixture/tests/: integration_test.rs
(+42276 files in other folders)
