[workspace]
members = [
    "apps/desktop/src-tauri",
    "modules/intelligence/ai-voice/apps/desktop/src-tauri",
    "modules/intelligence/speech/libs/speech-audio-rust",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies for the workspace
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
