[workspace]
members = [
    # Core specifications
    "contracts/proto-core",

    # Shared Rust crates (moved to libs/rust/agent-framework/)
    "libs/rust/agent-framework/common",
    "libs/rust/agent-framework/agent-common",
    "libs/rust/agent-framework/plugin-sdk",
    "libs/rust/agent-framework/plugin-sdk/examples/echo-wasm",
    "libs/rust/agent-framework/runtime-config-types",

    # Agent workspace crates (moved to framework/)
    "framework/agent-daemon/crates/agent-core",
    "framework/agent-daemon/crates/agent-config",
    "framework/agent-daemon/crates/agent-telemetry",
    "framework/agent-daemon/crates/agent-storage",
    "framework/agent-daemon/crates/agent-types",
    "framework/agent-daemon/crates/agent-metrics",
    "framework/agent-daemon/crates/agent-http",
    "framework/agent-daemon/crates/agent-ipc",
    "framework/agent-daemon/crates/agent-security",
    "framework/agent-daemon/crates/agent-plugin",
    "framework/agent-daemon/crates/agent-plugin-macros",
    "framework/agent-daemon/crates/agent-napi",
    "framework/agent-daemon",

    # Desktop application (moved to framework/)
    "framework/desktop/src-tauri",

    # Guardian product agents
    "apps/guardian/apps/agent-desktop",
]
resolver = "2"
[workspace.package]
version = "0.1.0"
authors = ["DCMaar Team"]
description = "DCMaar Agent - Core functionality for the DCMaar platform"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.90.0"

[workspace.dependencies]
# Common dependencies for workspace members
pretty_assertions = "1.4"
tempfile = "3.10"  
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
tracing = { version = "0.1", features = ["std"] }
chrono = { version = "0.4.37", features = ["serde"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
async-trait = "0.1"

# Configuration
config = "0.13"
figment = { version = "0.10", features = ["yaml", "toml", "env"] }
toml = "0.9"
validator = { version = "0.16.1", features = ["derive"] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
    "time",
    "json",
    "uuid",
], default-features = false }

# gRPC and Protocol Buffers
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.14", features = ["tls-webpki-roots"] }
tonic-build = "0.14"
tonic-prost-build = "0.14"

# WebAssembly
wasmtime = { version = "16.0", features = ["async"] }
wasmtime-wasi = "16.0"
wasmtime-wasi-http = { version = "16.0", features = ["sync"] }

# Web and networking
hyper = "1.3"
http = "1.0"
http-body = "1.0"
tower = { version = "0.4.13", features = ["util", "limit"] }
url = "2.5"

# Cryptography and security
rustls = { version = "0.22", features = ["tls12"] }
webpki = "0.22"
rcgen = "0.12"
rustls-pemfile = "2.1"

# System information
sysinfo = "0.30"
hostname = "0.3"

# File system utilities
walkdir = "2.4"

# UUID generation
uuid = { version = "1.8", features = ["v4", "serde"] }

# Time handling
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# OpenTelemetry
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
opentelemetry-jaeger = "0.21"
opentelemetry_sdk = { version = "0.21", package = "opentelemetry_sdk", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"

# Async runtime utilities
tokio-stream = { version = "0.1", features = ["sync"] }

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Concurrent data structures
dashmap = "5.5"

# Async primitives
tokio-util = { version = "0.7", features = ["compat"] }

# File watching
notify = "6.1"

# Process management
nix = "0.27"

# Network utilities
ipnetwork = "0.20"
dns-lookup = "2.0"

# Compression
flate2 = { version = "1.0", features = ["zlib"] }

# Hashing
sha2 = "0.10"
lazy_static = "1.4"
regex = "1.10"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Random number generation
rand = { version = "0.8", features = ["std"] }

# Lazy statics
once_cell = "1.19"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async file I/O (integrated into tokio::fs)
# tokio-fs is deprecated - use tokio::fs instead

# System signals (integrated into tokio::signal)
# tokio-signal is deprecated - use tokio::signal instead

# Async mutex (integrated into tokio::sync)
# tokio-sync is deprecated - use tokio::sync instead

# Async runtime metrics
tokio-metrics = "0.4.5"

# Metrics exporters
prometheus = "0.13"

# Structured logging
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_info"] }
slog-json = "2.3"
slog-async = "2.8"
slog-term = "2.9"

# Serialization macros
serde_derive = { version = "1.0" }

# WebAssembly parsing
wasmparser = "0.119"

# Internal crates
# Shared libraries
dcmaar-shared = { path = "core/shared-rust/dcmaar-shared" }

# Agent crates (moved to framework/)
agent-core = { path = "framework/agent-daemon/crates/agent-core" }
agent-config = { path = "framework/agent-daemon/crates/agent-config" }
agent-telemetry = { path = "framework/agent-daemon/crates/agent-telemetry" }
agent-storage = { path = "framework/agent-daemon/crates/agent-storage" }
agent-plugin = { path = "framework/agent-daemon/crates/agent-plugin" }
agent-metrics = { path = "framework/agent-daemon/crates/agent-metrics" }
agent-api = { path = "framework/agent-daemon/crates/agent-api" }
agent-ipc = { path = "framework/agent-daemon/crates/agent-ipc" }
agent-http = { path = "framework/agent-daemon/crates/agent-http" }
agent-security = { path = "framework/agent-daemon/crates/agent-security" }
agent-types = { path = "framework/agent-daemon/crates/agent-types" }
agent-plugin-macros = { path = "framework/agent-daemon/crates/agent-plugin-macros" }
dcmaar-agent-common = { path = "libs/rust/agent-framework/agent-common" }
