[package]
name = "guardian-agent-desktop"
version = "0.1.0"
edition = "2021"
description = "Guardian desktop usage collector plugin for DCMAAR agent"
license = "MIT"
authors = ["Guardian Team"]
publish = false

[lib]
name = "guardian_agent_desktop"
crate-type = ["cdylib", "rlib"]

[dependencies]
# DCMAAR framework crates (via path dependencies)
agent-plugin = { path = "../../../../framework/agent-daemon/crates/agent-plugin" }
agent-types = { path = "../../../../framework/agent-daemon/crates/agent-types" }
agent-storage = { path = "../../../../framework/agent-daemon/crates/agent-storage" }

# Shared connector contract (Rust replica of TS connectors)
agent-connectors = { path = "../../../../libs/rust/agent-framework/agent-connectors" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System info
sysinfo = "0.30"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Database - use sqlx instead of rusqlite to match agent-types
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"
hostname = "0.3"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"
