[package]
name = "dcmaar-proto"
version = "0.1.0"
edition = "2021"
description = "Generated Protocol Buffer code for DCMaar"
publish = false
# build = "build.rs"  # Disabled: Use buf generate instead

[lib]
name = "dcmaar_proto_host"
path = "src/lib.rs"

[dependencies]
tonic = { version = "0.10", default-features = false, features = ["tls"] }
prost = "0.12"
bytes = "1.0"
futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dcmaar_proto = { package = "dcmaar-pb", path = "gen/rust" }

[build-dependencies]
tonic-build = "0.10"
walkdir = "2.3"
anyhow = "1.0"

[features]
default = ["tonic/transport"]
