[package]
name = "guardian-plugins"
version = "0.1.0"
edition = "2021"
description = "Guardian-specific collector, enricher, and action plugins for DCMAAR agent"
authors = ["Guardian Team"]
license = "Apache-2.0"

[dependencies]
# DCMAAR Agent SDK (Rust crates under framework/agent-daemon)
agent-plugin = { path = "../../../framework/agent-daemon/crates/agent-plugin" }
agent-types = { path = "../../../framework/agent-daemon/crates/agent-types" }
agent-core = { path = "../../../framework/agent-daemon/crates/agent-core" }
agent-metrics = { path = "../../../framework/agent-daemon/crates/agent-metrics" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Core utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Metrics
prometheus = "0.13"

# Configuration
config = "0.13"

# HTTP client and TLS (for Phase 2 backend integration)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rustls = "0.21"
rustls-pemfile = "1.0"

# JWT authentication
jsonwebtoken = "9"

# OS Keyring for token storage
keyring = "2.1"

# Certificate generation and management
rcgen = "0.11"

# System information
sys-info = "0.9"

# Unix-specific (for admin checks)
libc = "0.2"

[features]
default = ["keyring"]
keyring = []

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winbase", "tlhelp32", "psapi"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "guardian-plugins"
path = "src/main.rs"

[lib]
name = "guardian_plugins"
path = "src/lib.rs"
