[package]
name = "agent-core-rs"
version.workspace = true
authors.workspace = true
description = "Core functionality for the DCMaar Agent"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "process", "time"] }
futures = { workspace = true }
async-trait = { workspace = true }
http-body = { workspace = true }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "time", "chrono", "json", "uuid", "macros"] }

# gRPC and Protocol Buffers
tonic = { workspace = true }

# Networking
url = { workspace = true }
hyper = { workspace = true }

# Web framework and HTTP utilities
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { workspace = true, features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = [
    "fs", 
    "cors", 
    "add-extension", 
    "trace", 
    "compression-br",
    "compression-gzip",
    "decompression-br",
    "decompression-gzip",
    "sensitive-headers",
    "set-header",
] }
# Internal crates
agent-http = { path = "crates/agent-http", features = ["metrics"] }

# OpenAPI and documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }

# TLS and security
tokio-rustls = { version = "0.25" }
rustls = { workspace = true }
walkdir = { workspace = true }

# System information
sysinfo = { workspace = true }
jsonschema = "0.17"
dirs = "5.0"
hostname = "0.3"

# Compression and archiving
flate2 = "1.0"
tar = "0.4"

# Configuration
toml = { workspace = true }
thiserror = { workspace = true }

# Protocol Buffers
prost = { workspace = true }
prost-types = { workspace = true }

# WebAssembly and Plugin Framework
wasmtime = { workspace = true }
wasmtime-wasi = "25.0"

# Async utilities
tokio-stream = { workspace = true }

# Random number generation
rand = { workspace = true }

# Machine Learning - ONNX Runtime (optional)
ort = { version = "2.0.0-rc.10", features = ["ndarray"], optional = true }
ndarray = "0.15"

# Adaptive Sampling Dependencies
nalgebra = "0.32"
regex = "1.10"
lazy_static = "1.4"
sha2 = "0.10"

# Internal workspace crates
agent-types = { workspace = true }
agent-metrics = { workspace = true }
dcmaar_proto = { package = "dcmaar-pb", path = "../../contracts/proto-core/gen/rust" }
agent-telemetry = { path = "crates/agent-telemetry" }
agent-auth = { path = "crates/agent-auth" }

# Validation
validator = { workspace = true, features = ["derive"] }

# Cryptography
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }
webpki = { workspace = true }

# Telemetry
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }

# Runtime dependencies
uuid = { workspace = true, features = ["v4", "serde"] }
log = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }
chrono = { workspace = true, features = ["serde"] }

# Additional dependencies for Week 3-4 milestone
dashmap = "5.5" # For concurrent hash maps in communication bus
parking_lot = "0.12" # For RwLock in bridge module

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Performance and system info
num_cpus = "1.16"



[build-dependencies]
prost-build = "0.12"
prost-types = "0.12"
tonic-build = { workspace = true }
chrono = { workspace = true }

[features]
default = ["std", "plugins"]
std = []
plugins = []
onnx = ["ort"]
# Guardian feature (currently disabled as it requires external dependencies)
# guardian = []
legacy-agent-tests = []

[lib]
name = "agent_rs"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
mockall = "0.12"

[[bench]]
name = "proto_bench"
harness = false

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "compression_benchmarks"
harness = false

[[bench]]
name = "performance_suite"
harness = false

