[package]
name = "audio-video-desktop"
version = "1.0.0"
description = "Unified Audio-Video Desktop Application"
authors = ["Ghatana Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
