[package]
name = "agent-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.18", features = ["v4", "serde"] }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tokio-tungstenite = "0.21"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.5"

[dev-dependencies]
pretty_assertions = { workspace = true }
