[package]
name = "dcmaar-common"
version = "0.1.0"
edition = "2021"
authors = ["DCMAAR Team"]
description = "Common utilities and error types for DCMAAR agent framework"
license = "Apache-2.0"
publish = false

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
