[package]
name = "runtime-config-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Generated Rust bindings for the shared runtime configuration schema"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
typify = { version = "0.2", features = ["macro"] }
