[package]
name = "agent-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Authentication and authorization for DCMAAR Agent"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
chrono = { workspace = true, features = ["serde"] }
hmac = "0.12"
jsonwebtoken = "9.3"
rand = "0.8"
rcgen = { workspace = true }
rustls = "0.23"
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.26"
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
webpki = { workspace = true }
webpki-roots = "0.26"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
