[package]
name = "agent-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Metrics collection and reporting for the DCMaar agent"
publish = false

[features]
default = ["prometheus"]
prometheus = ["metrics-exporter-prometheus"]
docker = []
kubernetes = []
wasm-plugins = []

[dependencies]
# Internal crates
agent-types = { workspace = true, features = ["serde"] }

# System information
sysinfo = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Async trait
async-trait = { workspace = true }

# WAL/Buffer
sled = "0.34"

# Networking for exporters
reqwest = { version = "0.11", features = ["json"] }

# Linux proc filesystem
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
tokio-test = "0.4"