[package]
name = "agent-napi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "napi-rs bridge for DCMAAR agent connectors"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
agent-core = { path = "../agent-core" }
chrono = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
napi = { version = "2.16.3", features = ["async", "tokio_rt"] }
napi-derive = "2.16.3"
once_cell = { workspace = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
napi-build = "2.2"
